# freedce

./: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.CROSS.MINGW32  README.MAINT  Versions  acconfig.h  acinclude.m4  aclocal.m4  buildconf  config.mk.in  config.status  configure  configure.in  configure.mingw-cross  exc_handling.c  freedce.spec  freedce.spec.in  include.mk  ltmain.sh  pthd4_libc_wrapers.c  pthread_dce.c  pthread_dce_atfork.c  pthread_dce_atfork.h  pthread_dceexc.c
dcelib/: Makefile.am  Makefile.in  dummyfuncs.c
dcethreads/: .gitignore  COPYING  ChangeLog  README  README.MAINT  acconfig.h  buildconf  configure.in  dcethreads.spec.in
dcethreads/include/dce/: dcethreads_conf.h.in  exc_handling.h  pthread.h  pthread_dce.h  pthread_dce_common.h  pthread_dce_exc.h  pthread_exc.h  pthreads_rename.h
dcethreads/src/: Makefile.am  Versions  exc_handling.c  pthd4_libc_wrapers.c  pthread_dce.c  pthread_dceexc.c
dcethreads/tests/: Makefile.am  inverttest  test2.c  test3var.c  test4.c  test5.c
dcom/: Makefile.am  scmscm.idl
demos/echo_server/: Makefile.am  Makefile.in  echo.idl  echo_client.c  echo_server.c  misc.c
freedce/: .gitignore  Makefile.am  NEWS  README.CROSS.MINGW32  README.MAINT  RPC_OUTPUT_FILES.in  acinclude.m4  autogen.sh  config.mk.in  config.status  configure.in  include.mk
freedce/dcelib/: config.m4  dummyfuncs.c
freedce/dcom/: .cvsignore  Makefile.am  config.m4  dcom.h  init.c  obase.idl  objex.idl  wtypes.idl
freedce/demos/: Makefile.am  config.m4
freedce/demos/echo_server/: .cvsignore  Makefile.am  config.m4  echo.acf  echo.idl  echo_client.c  echo_server.c  misc.c
freedce/demos/lsa/: Makefile.am  config.m4  lsarpc.acf  lsarpc.h  lsarpc.idl  lsarpc_lib.c
freedce/demos/ntsec/: Makefile.am  config.m4  ntsec.idl
freedce/demos/samr/: Makefile.am  config.m4  samr.acf  samr.idl  samr_client.c  samr_server.c
freedce/idl/: .cvsignore  acf_l.l  ast.h  astp_com.c  astp_cpx.c  astp_exp.c  astp_gbl.c  checker.c  checker.h  chkichar.c  command.c  config.m4  cspeldcl.c  cspell.c  ddbe.c  driver.c  errors.c  errors.h  frontend.c  frontend.h  hdgen.c  hdgen.h  idl.cat  irep.h  irepgen.c  keywds.c  mtsbacke.c  nametbl.h  nidl.h  nidl_l.l  nidlmsg.m  propagat.c  sstubmts.c  sysdep.h.in  ylwrap
freedce/idllib/: Makefile.am  autohndl.c  bindcall.c  config.m4  ctxerrtl.c  eebool.c  eechar.c  eehyper.c  eelong.c  eenodtbl.c  eeshort.c  eeuhyper.c  eeulong.c  eeushort.c  eeusmall.c  erbyte.c  erdouble.c  erfloat.c  erhyper.c  erlong.c  ernodtbl.c  ershort.c  ersmall.c  eruhyper.c  erushort.c  erusmall.c  interpsh.c  marbfman.c  ndrcharp.c  ndrchars.c  ndrdebug.h  ndrfloat.c  ndrmi.c  ndrmi.h  ndrmi2.c  ndrmi5.c  ndrui.h  ndrui2.c  ndrui3.c  ndrui5.c  (+10 more)
freedce/include/: config.m4  nbase.h
freedce/include/dce/: .cvsignore  Makefile.am  config.h  ep.idl  idl_es.h  idlddefs.h  obase.idl  objex.idl  remact.idl  rpcbase.idl  winerror.h  winnt.idl  wtypes.idl
freedce/ncklib/: Makefile.am  comfork.c  ncklib.mk  rpcsvc.c
freedce/ncklib/auth/: Makefile.am  byteorder.h  (+29 more)
freedce/perf/: .cvsignore  Makefile.am  client.c  config.m4  perf.c  perf_c.h  perfb.c  server.c  util.c
freedce/rpcd/: .cvsignore  Makefile.am  config.m4  dsm.c  dsm.h  dsm.idl  dsm_p.h  dsm_unix.c  rpcd.c  rpcddb.c  rpcddb.h  rpcdep.c  rpcdutil.c
freedce/uuid/: .cvsignore  Makefile.am  config.m4  get_ether_addr.c  uuid-cpp.cpp  uuid.c  uuid.hpp  uuid_i.h  uuidsys.c  uuidtool.cpp  win32mem.c  win32timeofday.c  win32uuid.c
idl/: .cvsignore  Makefile.am  Makefile.in  acf_l.l  acf_y.y  ast.h  astp.h  astp_com.c  astp_cpx.c  astp_dmp.c  astp_exp.c  astp_sim.c  backend.h  checker.c  chkichar.c  clihamts.c  clihandl.h  command.c  command.h  comstmts.c  config.m4  cspeldcl.c  cspell.c  cstubmts.c  cstubmts.h  ddbe.c  ddbe.h  ddspell.c  default_msg.h  driver.c  dutils.h  errors.c  errors.h  fe_pvt.h  files.c  files.h  frontend.c  hdgen.c  hdgen.h  icharsup.c  (+21 more)
include/dce/: .cvsignore  Makefile.am  Makefile.in  dcethreads_conf.h.in  ep.idl  exc_handling.h  idlbase.h  idlddefs.h  nbase.idl  obase.idl  pthread.h  pthread_exc.h  stubbase.h  twr.idl
ncklib/: Makefile.am  Makefile.in  comfork.c  config.m4  mgmt.c  ncklib.mk
ncklib/auth/: Makefile.am  Makefile.in  config.m4  hmacmd5.c  includes.h  lib_smb_proto.h  noauth.c  ntdomain.h  ntlmauth.c  ntlmssp_api.c  ntlmssp_api.h  ntlmsspauth.c  ntlmsspauthcn.c  parse_misc.c  parse_net.c  parse_ntlmssp.c  parse_prs.c  smb_macros.h
ncklib/codeset/: Makefile.in  config.m4  cs_s_reg.c
ncklib/com/: Makefile.am  Makefile.in  comauth.c  combind.c  comcthd.c  comep.c  comif.c  cominit.c  cominit_ux.c  comnaf.c  comnet.c  comnlsn.c  comp.c  comtwrref.c
ncklib/include/: cn.h  cnassoc.h  cnfbuf.h  cnnet.h  cnp.h  cnpkt.h  com.h  comauth.h  comauthimage.h  cominitp.h  commonp.h  comnaf.h  comnafimage.h  comp.h  comprot.h  comsoc.h  comsoc_bsd.h  comsoc_win32.h  comtwrref.h  ipnaf.h  mini_win32_net.h  noauth.h  noauthdg.h  ntlmsspauth.h  rpcdbg.h  rpclist.h  rpcmem.h  rpcmutex.h  twrp.h
ncklib/naf/: Makefile.am  Makefile.in  config.m4  ipnaf.c  ipnaf_linux.c  ipnaf_win32.c  twr_ip.c  twr_np.c  twr_uxd.c  uxdnaf.c
ncklib/rpc/: Makefile.am  Makefile.in  dce_error.c  rpcdbg.c  rpclist.c  rpcmem.c  rpcmutex.c  rpcrand.c  rpctimer.c
ncklib/transport/: Makefile.am  Makefile.in  comsoc_bsd.c  comsoc_win32.c  comsoc_win32_sendrcv.c
netlogon/include/: .cvsignore  Makefile.am  byteorder.h  config.m4  credentials.h  misc.h  netlogon.acf  netlogon.idl  smbhash.h
perf/: Makefile.am  client  client.c  perf.c  perf_tcp.sh  perfb.c  perfg.c  server  server.c  util.c
rpcd/: Makefile.am  Makefile.in  dsm.c  dsm.h  dsm_p.h  dsm_unix.c  rpcd.c  rpcddb.c  rpcdep.c  rpcdepdb.c  rpcdsliv.c  rpcdutil.c
src/: Makefile.am  exc_handling.c  pthd4_libc_wrapers.c  pthread_dce.c  pthread_dce_atfork.c  pthread_dceexc.c
tests/: Makefile.am  Makefile.in  test1.c  test2.c  test3.c  test4.c  test_atfork1.c
uuid/: Makefile.am  Makefile.in  get_ether_addr.c  uuid-cpp.cpp  uuid.c  uuid.hpp  uuidsys.c  uuidtool.cpp  win32timeofday.c
(+244 files in other folders)
