dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/exc_handling.c)
AM_CONFIG_HEADER(include/dce/dcethreads_conf.h)
AM_INIT_AUTOMAKE(dcethreads, 2.0.2)
AC_PREFIX_DEFAULT(/opt/dce)

dnl Checks for programs.
AM_PROG_LIBTOOL
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(pthread, pthread_create)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h unistd.h features.h sys/cdefs.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(gettimeofday)

AC_DEFINE(YIELD_AFTER_PTHREAD_CREATE)

AC_OUTPUT(Makefile include/Makefile include/dce/Makefile src/Makefile tests/Makefile)
